--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,9 @@
       "forceConsistentCasingInFileNames": true,
       "rootDir": "./src",
       "outDir": "./dist",
-      "baseUrl": "."
+      "baseUrl": ".",
+      "paths" :{
+        "#/*" : ["./src/*"]
+      }
     }
   }
